--- a/packages/client/Panel/Panel.less
+++ b/packages/client/Panel/Panel.less
@@ -88,7 +88,6 @@
         position: relative;
         display: flex;
         width: 100%;
-        overflow: hidden;
 
         .simpleGraph & {
             margin: 0;
